--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
@@ -18,7 +20,8 @@
     "react-router-dom": "^6.3.0",
     "react-type-animation": "^1.1.3",
     "styled-components": "^5.3.5",
-    "swiper": "^8.2.6"
+    "swiper": "^8.2.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
