--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "moment": "^2.29.4",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
     "react-type-animation": "^1.1.3",
     "styled-components": "^5.3.5",
