--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "leila-saloon-web",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,13 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
     "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
-    "graphql": "^16.5.0",
-    "moment": "^2.29.4",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -22,9 +19,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
-    "react-type-animation": "^1.1.3",
     "styled-components": "^5.3.5",
-    "swiper": "^8.2.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
