--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "phosphor-react": "^1.4.1",
